# rickroll-firewall

./: LICENSE  README.md  ascender.json  pyproject.toml
src/: bootstrap.py  main.py  routes.py  settings.py
src/common/: link_models.py
src/controllers/: link_controller.py  link_hooks.py  main_controller.py
src/services/: link_monitor_service.py  rickroll_firewall_service.py
